<resources>
    <!-- Menu -->
    <string name="app_name" translatable="false">Tic TAI Toe</string>
    <string name="subname">A tic tac toe, with an AI and PRO features</string>
    <string name="button1">Player VS Player</string>
    <string name="button2">Player VS Computer</string>
    <string name="button3">Computer VS Computer</string>
    <string name="settings">Settings</string>
    <string name="bottom">App made by Nathan Fallet\n© Groupe MINASTE</string>

    <!-- Game -->
    <string name="again">Play again</string>
    <string name="back">Go back to the menu</string>
    <string name="playing_computer">Game is playing:\nComputer (%s), it\'s to you!</string>
    <string name="playing_human">Game is playing:\nPlayer %s, it\'s to you!</string>
    <string name="ended_computer">Game has ended!\nWinner: Computer (%s)</string>
    <string name="ended_human">Game has ended!\nWinner: Player %s</string>
    <string name="ended_empty">Game has ended!\nIt\'s a tie</string>
    <string name="unlocked_title">You unlocked a PRO feature!</string>
    <string name="unlocked_darkmode">You can now enable dark mode in settings</string>
    <string name="unlocked_hardcore">You can now enable hardcore in settings</string>

    <!-- Settings -->
    <string name="pro">Tic TAI PRO features</string>
    <string name="no_pro">Play to unlock PRO features</string>
    <string name="isDarkMode">Enable dark mode</string>
    <string name="isHardcore">Enable hardcore</string>
    <string name="about">More about the app</string>
    <string name="video">See the development video</string>
    <string name="instagram">Follow the developer on Instagram</string>
    <string name="moreApps">More apps</string>
    <string name="donate">Donate</string>
</resources>
