<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/subname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/subname" />

        <Button
            android:id="@+id/button1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/subname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/darkActive"
            android:textColor="@color/white"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@color/darkActive"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@color/darkActive"
            android:text="@string/button3" />

        <Button
            android:id="@+id/settings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@color/lightActive"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/bottom" />

    </RelativeLayout>

</RelativeLayout>